glpi/manifests/09-glpi-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-fpm
  labels:
    app: php-fpm
  namespace: glpi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-fpm
  template:
    metadata:
      labels:
        app: php-fpm
    spec:
      containers:
      - image: eftechcombr/glpi:php-fpm-10.0.18
        imagePullPolicy: Always
        name: php
        ports:
        - containerPort: 9000
          name: fpm
        volumeMounts:
        - name: oci-block-volume-glpi-files-pvc
          mountPath: /var/lib/glpi
        - name: oci-block-volume-glpi-etc-pvc
          mountPath: /etc/glpi
        - name: oci-block-volume-glpi-marketplace-pvc
          mountPath: /var/www/html/marketplace
        resources: {}
      volumes: 
      - name: oci-block-volume-glpi-etc-pvc
        persistentVolumeClaim: 
          claimName: oci-block-volume-glpi-etc-pvc
      - name: oci-block-volume-glpi-files-pvc
        persistentVolumeClaim:
          claimName: oci-block-volume-glpi-files-pvc
      - name: oci-block-volume-glpi-marketplace-pvc
        persistentVolumeClaim:
          claimName: oci-block-volume-glpi-marketplace-pvc


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: glpi 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: eftechcombr/glpi:nginx-10.0.18
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: files 
          mountPath: /var/lib/glpi
        - name: marketplace
          mountPath: /var/www/html/marketplace
        - name: etc
          mountPath: /etc/glpi
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d
        resources: {}
      volumes: 
      - name: etc 
        persistentVolumeClaim:
          claimName: glpi-etc 
      - name: files
        persistentVolumeClaim:
          claimName: glpi-files
      - name: marketplace
        persistentVolumeClaim:
          claimName: glpi-marketplace          
      - name: nginx-conf
        configMap:
          defaultMode: 420
          name: nginx-conf


---
apiVersion: v1
kind: Service
metadata: 
  name: php-fpm
  labels: 
    app: php-fpm
  namespace: glpi 
spec:
  ports: 
    - port: 9000
      targetPort: 9000
  selector: 
    app: php-fpm


---
apiVersion: v1
kind: Service
metadata: 
  name: nginx
  labels: 
    app: nginx
  namespace: glpi
spec:
  ports: 
    - port: 80
      targetPort: 80
  selector: 
    app: nginx
