glpi/manifests/12-glpi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi-ingress
  namespace: glpi 
spec:
  ingressClassName: nginx
  tls: 
  - hosts: 
    - glpi-hml.jetsales.com.br
  rules:
  - host: "glpi-hml.jetsales.com.br" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
